tests/errors/_questions/generated_errors/cond_must_be_in_brkts/no_)_in_if.c
void main()
{
	int b = 10;
	if (b == 10
	{
		printid(b);
	}
}